--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.1",
-    "@angular/common": "~8.1.1",
+    "@angular/common": "^8.0.0",
     "@angular/compiler": "~8.1.1",
-    "@angular/core": "~8.1.1",
+    "@angular/core": "^8.1.3",
     "@angular/forms": "~8.1.1",
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
+    "angular-in-memory-web-api": "^0.8.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
